# Django

./: .gitignore  .replit  Procfile  package.json  pyproject.toml  replit.md  requirements-api.txt  requirements.txt  template_preview.html  updates.txt
Backend/: CORS.md  ai_generated_content_test.json  aurora.py  check_env_setup.py  db.sqlite3  debug_output.html  debug_template_vars.py  find_aurora.py  manage.py  pyproject.toml  run_server.py  template_preview.html  test_ai_content.py  test_ai_workflow.py  test_async_pdf.py  test_db_conn.py  test_pdf.py  test_pdf_generation.py  test_perplexity_key.py  test_raw_response.py  test_template_rendering.py  test_timeout_handling.py  verify_mapping.py
Backend/accounts/: models.py  serializers.py  urls.py  views.py
Backend/aurora/: __init__.py  settings.py
Backend/django_project/: celery.py  exceptions.py  middleware.py  settings.py  urls.py
Backend/lead_magnets/: .gitignore  apps.py  models.py  perplexity.py  perplexity_client.py  revision_prompts.py  revision_views.py  serializers.py  services.py  tasks.py  test_rendering.py  tests_ping.py  tests_resilience.py  urls.py  verify_pipeline.py  views.py
Backend/tests/: test_docraptor_service.py
Frontend/: README.md  brand_color_test.html  package-lock.json  package.json  static.json  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
Frontend/src/: App.css  App.tsx  (+4 more)
attached_assets/: Pasted-AI-Lead-Magnet-Generator-Question-Summary-A-One-Time-Firm-Profile-Branding-collected-once-reu-1758718148673_1758718148674.txt
docs/: 404-resolution.md
(+81 files in other folders)
