[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = ""
authors = ["Kauser Niaze Mohammed <41912173-mkniaze@users.noreply.replit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"
djangorestframework-simplejwt = "^5.5.1"
django-cors-headers = "^4.9.0"
pillow = "^11.3.0"
django = "^5.2.6"
djangorestframework = "^3.16.1"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
